--- a/src/app/components/materia/materia.component.html
+++ b/src/app/components/materia/materia.component.html
@@ -13,16 +13,20 @@
                 <input type="text" matInput placeholder="Nombre" formControlName="nombre">
             </mat-form-field>
             <mat-form-field class="col-2">
-                <mat-label>Grupo</mat-label>
-                <input type="text" matInput placeholder="Grupo" formControlName="grupo">
-            </mat-form-field>
-            <mat-form-field class="col-2">
                 <mat-label>Grado</mat-label>
                 <input type="text" matInput placeholder="Grado" formControlName="grado">
             </mat-form-field>
             <mat-form-field class="col-2">
+                <mat-label>Grupo</mat-label>
+                <input type="text" matInput placeholder="Grupo" formControlName="grupo">
+            </mat-form-field>
+            <mat-form-field class="col-2">
                 <mat-label>Turno</mat-label>
-                <input type="text" matInput placeholder="Turno" formControlName="turno">
+                <mat-select formControlName="turno">
+                  @for (turno of turnos; track turno) {
+                    <mat-option [value]="turno">{{turno}}</mat-option>
+                  }
+                </mat-select>
             </mat-form-field>
         <!--<div class="col-2">
             <mat-form-field>
