--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -22,7 +22,7 @@
             <button mat-button [matMenuTriggerFor]="alumnosMenu">Alumnos</button>
             <mat-menu #alumnosMenu="matMenu" yPosition="below">
             <button mat-menu-item routerLink="/alumno">Nuevo Alumno</button>
-            <button mat-menu-item>Item 2</button>
+            <button mat-menu-item routerLink="/list">Lista de alumnos</button>
             </mat-menu>
     </div>
 </div>
